[package]
name = "atspi-offspring"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
zbus = "4"
atspi = { git = "https://github.com/odilia-app/atspi.git", branch = "objectref2accessibleproxy", features = ["proxies-tokio"] }
